Edit text layout and keyboard interface has been improved

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">4dp</dimen>
     <dimen name="activity_vertical_margin">4dp</dimen>
     <dimen name="hexColorTextSize">45sp</dimen>
+    <dimen name="hexStringTextSizeCondensed">15sp</dimen>
     <dimen name="listTextSize">15sp</dimen>
     <dimen name="listRowPadding">15dp</dimen>
     <dimen name="image_horizontal_padding">45dp</dimen>
