--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,10 +34,11 @@
         android:id="@+id/hex_input_box"
         android:textSize="@dimen/hexColorTextSize"
         android:text="@string/hexColorDefaultText"
+        android:imeOptions="actionDone"
         android:maxLength="9"
         android:textStyle="bold|italic"
         android:gravity="center"
-        android:layout_weight=".33" />
+        android:layout_weight=".70" />
 
     <TextView
         android:layout_width="match_parent"
@@ -158,7 +159,7 @@
     </RelativeLayout>
 
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/light_grey"
