--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,5 +5,8 @@
         android:orderInCategory="100" app:showAsAction="never" />
 
     <item android:id="@+id/reset_color" android:title="@string/reset_color"
+        android:orderInCategory="2" app:showAsAction="never" />
+
+    <item android:id="@+id/openImage" android:title="@string/openImage"
         android:orderInCategory="1" app:showAsAction="ifRoom" />
 </menu>
